--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img class="resize_profile" src="https://avatars.githubusercontent.com/u/16547071?v=3&s=440" alt="a picture of Ricardo">
       <h1>Ricardo Furuta</h1>
       <h2>Enjoy playing with HTML</h2>
-      <p>After 2 weeks of strugle really bad with backend and feeling stupid, I am now happy with this HTML part. It's a Piece of Cake</p>
+      <p>After 2 weeks struggling really bad with backend and feeling stupid, I am now happy with this HTML part. It's a Piece of Cake</p>
       <ul class="list_inline">
         <li>
           <a href="https://www.facebook.com/">
